--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
       </div>
     </div>
   </div>
-   <div id="loadingPopup" class="loading-popup" style="display: none;">
+
+  <!-- Glitch Terminal Loading Popup -->
+  <div id="loadingPopup" class="loading-popup" style="display: none;">
     <div class="glitch-text">SENDING FEEDBACK...</div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
