--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <!-- Review Modal Popup -->
-  <div id="reviewModal" class="modal" style="display: none;">
+  <div id="reviewModal" class="modal">
     <div class="modal-content">
       <span id="closeModal" class="close-button">&times;</span>
       <h2>Submit Your Review</h2>
@@ -63,7 +63,7 @@
   </div>
 
   <!-- Loading Popup -->
-  <div id="loadingPopup" class="loading-popup" style="display: none;">
+  <div id="loadingPopup" class="loading-popup">
     <div class="glitch-text">SENDING FEEDBACK...</div>
   </div>
 
