--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- Typing Effect Section -->
-  <div class="typing-container">
+  <div class="typing-container glowing">
     <div class="typing-header">
       <span id="typing-text"></span>
       <span class="cursor">|</span>
@@ -17,10 +17,16 @@
   </div>
 
   <!-- Main Terminal Section -->
-  <div class="terminal" id="terminal" style="display: none;">
-    <div class="header">Welcome to Priyanshu Kumar's Portfolio</div>
+  <div class="terminal" id="terminal">
+    <div class="terminal-header">
+      <div class="terminal-buttons">
+        <span class="btn red"></span>
+        <span class="btn yellow"></span>
+        <span class="btn green"></span>
+      </div>
+      <div class="terminal-title">Welcome to Priyanshu Kumar's Portfolio</div>
+    </div>
 
-    <!-- ✨ Permanent Intro Text -->
     <div class="intro-text">
       <div class="line">&gt; Hi! My name is Priyanshu Kumar.</div>
       <div class="line">&gt; Do you want to know more about me? Type a command below.</div>
@@ -35,36 +41,63 @@
       </div>
     </div>
 
-    <!-- Terminal Content -->
+    <!-- Output & Command Input -->
     <div class="content">
-      <!-- Output Area -->
       <div id="output"></div>
-
-      <!-- Command Input Area with Suggestions -->
-      <div class="command-area" style="position: relative;">
+      <div class="command-area">
         <span class="prompt">></span>
         <input type="text" id="commandInput" autocomplete="off" autofocus />
-        <div id="suggestion-box" class="suggestion-box" style="display: none;"></div>
+        <div id="suggestion-box" class="suggestion-box"></div>
       </div>
 
-      <!-- Review Form (Hidden by Default) -->
+      <!-- Feedback Form -->
       <div id="reviewFormContainer" style="display: none;">
         <form id="reviewForm">
-          <label for="name">Name:</label>
-          <input type="text" id="name" required /><br /><br />
+          <div class="form-scroll-area">
+            <label for="name">Name:</label>
+            <input type="text" id="name" required />
 
-          <label>Experience:</label>
-          <input type="radio" id="positive" name="experience" value="Positive" required />
-          <label for="positive">Positive</label>
-          <input type="radio" id="negative" name="experience" value="Negative" />
-          <label for="negative">Negative</label><br /><br />
+            <label for="gmail">Gmail (optional):</label>
+            <input type="email" id="gmail" placeholder="you@example.com" />
 
-          <label for="comment">Comments:</label>
-          <textarea id="comment" rows="4" cols="50" required></textarea><br /><br />
+            <label>Experience:</label>
+            <div class="radio-group">
+              <label><input type="radio" name="experience" value="Positive" required /> Positive</label>
+              <label><input type="radio" name="experience" value="Neutral" /> Neutral</label>
+              <label><input type="radio" name="experience" value="Negative" /> Negative</label>
+            </div>
 
-          <button type="submit">Submit Feedback</button>
+            <label for="comment">Comment:</label>
+            <textarea id="comment" rows="4" required></textarea>
+          </div>
+          <div class="form-footer">
+            <button type="submit" class="submit-btn">Submit Feedback</button>
+          </div>
         </form>
       </div>
+    </div>
+  </div>
+
+  <!-- Kali-style Terminal Popup -->
+  <div id="terminalPopup">
+    <div class="popup-header">
+      <div class="window-controls">
+        <span class="minimize"></span>
+        <span class="maximize"></span>
+        <span class="close" id="closePopup"></span>
+      </div>
+      <span class="title-text">kali@priyanshu-Portfolio:~$</span>
+    </div>
+    <div class="popup-body" id="popupBody"></div>
+    <div class="popup-footer">
+      <button class="close-terminal-btn" onclick="document.getElementById('terminalPopup').style.display='none'">Close</button>
+    </div>
+  </div>
+
+  <!-- Feedback Animation Popup -->
+  <div id="feedbackPopup" class="feedback-popup hidden">
+    <div class="popup-inner">
+      <span id="typingMessage" class="glitch-text"></span>
     </div>
   </div>
 
